--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       new Twitch.Embed("twitch-embed", {
         width: 854,
         height: 480,
-        channel: "monstercat",
+        channel: "snowcape",
         // only needed if your site is also embedded on embed.example.com and othersite.example.com 
         parent: ["embed.example.com", "othersite.example.com"]
       });
