--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
   </head>
 
   <body>
-    <!-- Add a placeholder for the Twitch embed -->
+
+          <!-- Create a Twitch.Embed object that will render within the "twitch-embed" root element. --
+
+      <!-- Add a placeholder for the Twitch embed -->
     <div id="twitch-embed"></div>
 
     <!-- Load the Twitch embed script -->
@@ -37,7 +40,7 @@
         parent: ["embed.example.com", "othersite.example.com"]
       });
     </script>
-
+>
  
 
   </body>
