--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
           
           <</div>
       
+          <iframe
+    src="https://player.twitch.tv/?collection=abcDeF1ghIJ2kL&parent=streamernews.example.com"
+    height="720"
+    width="1280"
+    frameborder="0"
+    scrolling="no"
+    allowfullscreen="true">
+</iframe>
+
   </head>
 
    <body style="background-color:black;">
