--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <</div>
       
           <iframe
-    src="https://player.twitch.tv/?collection=abcDeF1ghIJ2kL&parent=streamernews.example.com"
+    src="https://www.twitch.tv/videos/706207849"
     height="720"
     width="1280"
     frameborder="0"
