--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ ga('send', 'pageview');
 
 <script data-ad-client="ca-pub-3694260575940279" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
+
 </head>
 <body class="default-skin opera blink">
 <noscript>
@@ -524,11 +525,9 @@ Skins            (<a href="https://namemc.com/minecraft-skins/profile/illed.3">1
   <div class="container text-center">
     <hr class="m-0">
     <div class="row py-2">
-      <div class="col-sm py-1"><small><a href="mailto:contact@namemc.com">contact@namemc.com</a></small></div>
-      <div class="col-sm py-1"><small><a href="https://namemc.com/privacy">Privacy</a></small></div>
       <div class="col-sm py-1"><small><a class="nn-cmp-show" href="https://namemc.com/profile/illed.3#">Cookie Settings</a></small></div>
       <div class="col-sm py-1"><small>Emoji by <a class="text-nowrap" href="https://twitter.github.io/twemoji/" target="_blank">Twem❤ji</a></small></div>
-      <div class="col-sm py-1"><small>Copyright © 2015–2020</small></div>
+      <div class="col-sm py-1"><small></small></div>
     </div>
   </div>
 </footer>
