--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@namemc_com">
 <meta name="theme-color" content="#0E0E20">
-<link rel="manifest" href="https://namemc.com/manifest.json">
 <link rel="canonical" href="https://namemc.com/profile/94d9e48f-6bc4-43a9-b2ee-802021e7d514">
 <link rel="alternate" hreflang="id" href="https://id.namemc.com/profile/94d9e48f-6bc4-43a9-b2ee-802021e7d514">
 <link rel="alternate" hreflang="ms" href="https://ms.namemc.com/profile/94d9e48f-6bc4-43a9-b2ee-802021e7d514">
@@ -134,7 +133,7 @@ ga('send', 'pageview');
 <header class="mb-3">
   <div class="container">
     <nav class="navbar navbar-expand px-0">
-      <a class="navbar-brand text-dark d-none d-lg-block" href="https://namemc.com/" title="Minecraft Names &amp; Skins"><img class="align-top" src="./index_files/favicon-30.png" width="30" height="30" alt="NameMC"><span class="ml-2" translate="no">NameMC</span></a>
+      <a class="navbar-brand text-dark d-none d-lg-block" href="" title="Minecraft Names &amp; Skins"><img class="align-top" src="./index_files/favicon-30.png" width="30" height="30" alt="NameMC"><span class="ml-2" translate="no">NameMC</span></a>
       <ul class="navbar-nav mr-auto d-none d-lg-flex">
         <li class="nav-item"><a class="nav-link" href="https://namemc.com/minecraft-skins"><i class="fas fa-user menu-icon d-none d-xl-inline-block"></i>Top Minecraft Skins</a></li>
         <li class="nav-item"><a class="nav-link" href="https://namemc.com/minecraft-servers"><i class="fas fa-server menu-icon d-none d-xl-inline-block"></i>Top Minecraft Servers</a></li>
