--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 
   <head>
 
+<script src="https://www.paypal.com/sdk/js?client-id=test"></script>
+<script>paypal.Buttons().render('body');</script>
+
     <script data-ad-client="ca-pub-3694260575940279" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
       <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
