--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
 
   <head>
 
-<script src="https://www.paypal.com/sdk/js?client-id=test"></script>
-<script>paypal.Buttons().render('body');</script>
+  <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Ensures optimal rendering on mobile devices. -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" /> <!-- Optimal Internet Explorer compatibility -->
+</head>
+
+<body>
+  <script
+    src="https://www.paypal.com/sdk/js?client-id=YOUR_CLIENT_ID"> // Required. Replace YOUR_CLIENT_ID with your sandbox client ID.
+  </script>
+</body>
 
     <script data-ad-client="ca-pub-3694260575940279" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
